<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Ticket</string>
    <string name="title_activity_login">Smart Ticket</string>

    <string name="error_invalid_password">Required</string>
    <string name="error_field_required">Required</string>
    <string name="footer">© Copyright 2018 PAIT BIZ SYSTEMS Pvt.Ltd. All Rights Reserved.</string>
    <string name="footer1">© Copyright 2017 LNB Infotech Pvt.Ltd. All Rights Reserved.</string>

    <!-- PREF -->
    <string name="pref_isRegister">isRegister</string>
    <string name="pref_isTableSaved">isTableSaved</string>
    <string name="pref_isCategorySaved">isCategorySaved</string>
    <string name="pref_compName">compName</string>
    <string name="pref_address">address</string>
    <string name="pref_contactNo">contactNo</string>
    <string name="pref_expiryDate">expiryDate</string>
    <string name="pref_username">username</string>
    <string name="pref_password">password</string>
    <string name="pref_clientID">clientID</string>
    <string name="pref_emptype">emptype</string>
    <string name="pref_ticketTotal">tickettotal</string>
    <string name="pref_isHWapplicable">isHWapplicable</string>
    <string name="pref_version">version</string>
    <string name="pref_auto">auto</string>
    <string name="pref_groupid">groupid</string>
    <string name="pref_ClientName">ClientName</string>
    <string name="pref_mobno">mobno</string>
    <string name="pref_FTPLocation">FTPLocation</string>
    <string name="pref_FTPUser">FTPUser</string>
    <string name="pref_FTPPass">FTPPass</string>
    <string name="pref_FTPImgFolder">FTPImgFolder</string>
    <string name="pref_CustomerName">CustomerName</string>


    <string name="pref_IMEI">IMEI</string>
    <string name="pref_logged">logged</string>
    <string name="pref_nickname">nickname</string>
    <string name="pref_prodused">prodUsed</string>
    <string name="enter_client_id_here">Enter Client Id Here</string>
    <string name="verify">Verify</string>
    <string name="company_details">Company Details</string>
    <string name="company_name">Company</string>
    <string name="address">Address</string>
    <string name="contact_no">Contact No</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="enter_your_credentials">Enter Your Credentials</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="enter_number_of_tables">Enter Number Of Tables</string>
    <string name="save">Save</string>
    <string name="total_number_of_tables_you_have">Total Number Of Tables You Have</string>
    <string name="count">Count</string>
    <string name="cat1">Cat1</string>
    <string name="enter_cat1_name">Enter Cat1 Name</string>
    <string name="select_cat1">Select Cat1</string>
    <string name="cat2">Cat2</string>
    <string name="enter_cat2_name">Enter Cat2 Name</string>
    <string name="enter_tax_name">Enter Tax Name</string>
    <string name="rate">Rate</string>
    <string name="enter_rate">Enter Rate</string>
    <string name="change_cat1">Change Cat1</string>
    <string name="add">Add</string>
    <string name="proceed">Proceed</string>
    <string name="search_item">Search Item</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="table_no">Table No</string>
    <string name="tablename">TableName</string>
    <string name="waiter">Waiter</string>
    <string name="print">Print</string>
    <string name="item">Item</string>
    <string name="qty">Qty</string>
    <string name="amount">Amnt</string>
    <string name="_0">0</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="new_devices_available">New Devices Available</string>
    <string name="scan_new_device">Scan New Device</string>
    <string name="categoryClass">Category</string>
    <string name="bluetooth_new_device_list">Bluetooth New Device List</string>
    <string name="bluetooth_paired_device_list">Bluetooth Paired Device List</string>
    <string name="test">Test</string>
    <string name="remark">Remark</string>
    <string name="settings">Settings</string>
    <string name="user">User</string>
    <string name="tab1">TAB1</string>
    <string name="total">Total</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="enter_cash_amount">Enter Cash Amount</string>
    <string name="enter_card_amount">Enter Card Amount</string>
    <string name="tender">Tender</string>
    <string name="return_amnt">Return Amnt</string>
    <string name="enter_tender_amount">Enter Tender Amount</string>
    <string name="return_amount_will_show_here">Return Amount Will Show Here</string>
    <string name="balance">Balance</string>
    <string name="net_amt">NET AMT</string>
    <string name="balance_amount_will_show_here">Balance Amount Will Show Here</string>
    <string name="_5000">5000</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">LogIn</string>
    <string name="previous_name">Previous Name</string>
    <string name="update">Update</string>
    <string name="print_bill">Print Bill</string>
    <string name="add_masters">Add Masters</string>
    <string name="add_tax">Add Tax</string>
    <string name="logout">Logout</string>
    <string name="prev_name">Prev Name</string>
    <string name="tv_perv_tax_name">tv_perv_tax_name</string>
    <string name="new_name">New Name</string>
    <string name="tax_name">Tax Name</string>
    <string name="collection_report">Collection Report</string>
    <string name="itemwise_sale">Itemwise Sale</string>
    <string name="data_imported_data">Data Imported Date</string>
    <string name="no_data_imported">No Data Imported</string>
    <string name="import_data_from_date_range">Import Data From Date Range</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="all_dates">All Dates</string>
    <string name="show">Show</string>
    <string name="pref_isFeedReq">pref_isFeedReq</string>
    <string name="pref_nicknamebug">nicknamebug</string>
    <string name="pref_acchead">pref_acchead</string>

    <string-array name="navigationName">
        <item>Home</item>
        <item>Table Master</item>
        <item>Category Master</item>
        <item>GST Master</item>
        <item>Printer Options</item>
        <item>Reports</item>
        <item>Logout</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_name">Group Name</string>
    <string name="select_group_name">Select Group Name</string>
    <string name="enter_remark">Enter Remark</string>
    <string name="from_range">From Range</string>
    <string name="to_range">To Range</string>
    <string name="gst_per">GST Per</string>
    <string name="cgst_per">CGST Per</string>
    <string name="sgst_per">SGST Per</string>
    <string name="cgst_share">CGST Share</string>
    <string name="sgst_share">SGST Share</string>
    <string name="cess_per">Cess Per</string>
    <string name="report_error">Report Issue</string>
    <string name="reach_to_md">Reach To MD</string>
    <string name="release_notes">Release Notes</string>
    <string name="clear_data">Clear Data</string>
    <string name="change_password">Change Password</string>
    <string name="location">Location</string>
    <string name="machinetype">MachineType</string>
    <string name="machineid">MachineId</string>
    <string name="asset">Asset Management</string>

    <string name="banner_home_footer">ca-app-pub-3940256099942544/6300978111</string>

    <!--TODO: Uncomment for Test-->
    <!--<string name="main_screen_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="add_new_ticket_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ticket_list_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="update_ticket_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="massage_activity_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fullimg_activity_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="reachtomd_activity_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="assetmanagement_activity_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="addasset_activity_banner">ca-app-pub-3940256099942544/6300978111</string>-->

    <!--TODO: Uncomment for Live-->
    <string name="main_screen_banner">ca-app-pub-6568644984087031/6645892269</string>
    <string name="add_new_ticket_banner">ca-app-pub-6568644984087031/1880828352</string>
    <string name="ticket_list_banner">ca-app-pub-6568644984087031/1905890843</string>
    <string name="update_ticket_banner">ca-app-pub-6568644984087031/3353336904</string>
    <string name="massage_activity_banner">ca-app-pub-6568644984087031/3932276625</string>
    <string name="fullimg_activity_banner">ca-app-pub-6568644984087031/2197087773</string>
    <string name="reachtomd_activity_banner">ca-app-pub-6568644984087031/9483707581</string>
    <string name="assetmanagement_activity_banner">ca-app-pub-6568644984087031/4297544990</string>
    <string name="addasset_activity_banner">ca-app-pub-6568644984087031/9414140307</string>


</resources>
