<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:cotext=".MainActivity">

    <item
        android:id="@+id/action_notification1"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />

            <item
                android:id="@+id/refresh"
                android:icon="@drawable/ic_autorenew_black_24dp"
                android:title="@string/refresh" />

            <item
                android:id="@+id/clear_data"
                android:icon="@drawable/ic_delete_black_24dp"
                android:title="@string/clear_data" />

            <item
                android:id="@+id/changePassword"
                android:icon="@drawable/ic_house_key"
                android:title="@string/change_password" />

            <item
                android:id="@+id/report_error"
                android:icon="@drawable/ic_error_outline_black_24dp"
                android:title="@string/report_error" />

            <item
                android:id="@+id/reach_to_md"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/reach_to_md" />

            <item
                android:id="@+id/release_notes"
                android:icon="@drawable/ic_agenda"
                android:title="@string/release_notes" />

            <item
                android:id="@+id/asset"
                android:icon="@drawable/ic_database"
                android:title="@string/asset" />

       </menu>
    </item>
</menu>