<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mobpadding2"
        android:layout_marginRight="@dimen/mobpadding2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/line_left_right_bottom_draw"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_machineId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/machineid"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/line_right_bottom_draw"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_machinetype"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/machinetype"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/line_right_bottom_draw"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/location"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>